pxc/tests/test_007_constr/glothr.px
public namespace glothr;
import core::common -;

struct foo {
  public int x;
}

foo f; // error: foo is not pure
println(f.x);
